[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-bridge"
version = "0.1.0"
description = "Stable shared image generation/editing abstraction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mobile Apps Team" }]

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/image_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "live: tests that call real upstream provider APIs",
    "live_generate: live tests for generate_image",
    "live_edit: live tests for edit_image",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
